@@ -4,9 +4,5 @@
 
 BOOL WINAPI DllMain(HANDLE hDllHandle, DWORD dwReason, LPVOID lpreserved)
 {
-#if defined (CRTDLL)
-  if (dwReason == DLL_PROCESS_ATTACH && !_pRawDllMain)
-    DisableThreadLibraryCalls (hDllHandle);
-#endif
   return TRUE;
 }
